--- a/Python_Input_Field/templates/index.html
+++ b/Python_Input_Field/templates/index.html
@@ -9,13 +9,13 @@
       <div class="container">
         <h1>Comments and/or Rating of Service</h1>
         <h3></h3>
-        <form action="success.html" method="POST">
+        <form action="{{url_for('success')}}" method="POST">
           <!-- name is passed on to Python -->
           <!-- vars: message, rating, user_email -->
 
-          <textarea name="Text1" cols="40" rows="5"></textarea> <br>
+          <textarea name="Text1" cols="40" rows="5" ></textarea> <br>
           <option value="" selected="selected" >Choose Category...</option><br>
-          <input title="" placeholder="" type="" name="" required> <br>
+          <input title="" placeholder="" type="" name="text_area" required> <br>
           <button type="submit"> Submit </button>
         </form>
       </div>
