design: resize margins and clean up code

--- a/promotion/coupons/css/style.css
+++ b/promotion/coupons/css/style.css
@@ -63,7 +63,7 @@ h1 {
 /* Create two equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33%;
+    width: 40%;
     padding: none;
 }
 
@@ -155,6 +155,8 @@ NAVIGATION BAR
   position: fixed;
   top: 0;
   width: 100%;
+  padding: 10px;
+  text-align: center;
 }
 
 .wrap-around {
