feat: jquery, css transition, php second delay
Jquery feature hiding login button after being clicked, css table transition depending on the size of the contents inside the table, and a timer delay for when login fails.

--- a/single-input-login/css/style.css
+++ b/single-input-login/css/style.css
@@ -1,13 +1,23 @@
+* {
+  transition: height 2s;
+  -webkit-transition: height 2s; /* Safari */
+}
+
 body {
   background: #737878;
 }
 
-h1 {
+h1, a:link, a:visited, a:hover, a:active {
   text-align: center;
   font-family: 'Open Sans';
   color: #ffffff;
   font-weight: 300;
   margin: 0 0 40px;
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  font-size: 20px;
 }
 
 input {
