--- a/React-Advanced-Tutorial/react-advanced-tutorial/src/App.css
+++ b/React-Advanced-Tutorial/react-advanced-tutorial/src/App.css
@@ -1,3 +1,7 @@
+h1 {
+  font-size: 4em;
+}
+
 .App {
   text-align: center;
 }
@@ -9,7 +13,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
