--- a/React-2019/image-search/src/components/ImageList.css
+++ b/React-2019/image-search/src/components/ImageList.css
@@ -1,11 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .image-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 0 10px;
-  grid-auto-rows: 10px;
+  grid-auto-rows: 9px;
 }
 
 .image-list img {
-  width: 250px;
+  width: 285px;
   grid-row-end: span 2;
 }
