--- a/Animations/car-drive/style.css
+++ b/Animations/car-drive/style.css
@@ -7,11 +7,20 @@ body {
 	padding: 0;
 }
 
-.background {
+.color-bg {
 	height: 100vh;
-	background: url(bg-simple.png);
 	background-position: bottom left;
 	animation: driving 20s linear infinite;
+	background-image: radial-gradient(farthest-side at 50% 80%, rgba(0,0,0, 0), rgba(260,260,260,1));
+	overflow: hidden;
+}
+
+.background {
+	background: url(bg-simple.png);
+	background-position: top right;
+	animation: driving 20s linear infinite;
+	-webkit-transform: rotate(30deg);
+	transform: rotate(-20deg);
 }
 
 .headerTitle {
@@ -21,18 +30,19 @@ body {
 	left: 300px;
 	top: 10px;
 	width: 250px;
+	z-index: 10;
 }
 
 .car {
 	position: absolute;
-	left: 300px;
+	left: 600px;
 	bottom: 10px;
 	width: 250px;
 }
 
-.car-2 {
+.truck {
 	position: absolute;
-	left: 700px;
+	left: 800px;
 	bottom: 115px;
 	width: 500px;
 }
